// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. iconfacebook sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 25,
    }
  }
/>
`;

exports[`2. iconforwardarrow sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 58.333333333333336,
      "width": 29.166666666666668,
    }
  }
/>
`;

exports[`3. iconstar sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  aria-label="icon-save-star"
  bbHeight={50}
  bbWidth={50}
  focusable={false}
  height={50}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 50,
      "width": 50,
    }
  }
  title="Save star"
  vbHeight={18}
  vbWidth={18}
  width={50}
/>
`;

exports[`4. iconcopylink sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  aria-label="icon-copy-link"
  bbHeight={50}
  bbWidth={15}
  focusable={false}
  height={50}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 50,
      "width": 15,
    }
  }
  title="Copy link to clipboard"
  vbHeight={15}
  vbWidth={15}
  width={15}
/>
`;

exports[`5. iconsavebookmark sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 16,
      "width": 12,
    }
  }
/>
`;

exports[`6. icontwitter sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 62.5,
    }
  }
/>
`;

exports[`7. iconvideo sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 85,
    }
  }
/>
`;

exports[`8. iconvideo360player sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 54,
    }
  }
/>
`;

exports[`9. thestlogo sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 34.48275862068965,
      "width": 50,
    }
  }
/>
`;

exports[`10. thetimeslogo sets a width when height is set 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 50,
    }
  }
/>
`;

exports[`11. closeicon sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  aria-label="icon-close"
  bbHeight={50}
  bbWidth={28}
  focusable={false}
  height={50}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 50,
      "width": 28,
    }
  }
  title="Close Icon"
  vbHeight={28}
  vbWidth={28}
  width={28}
/>
`;
